# Silent-Print-ERPNext

./: pyproject.toml
silent_print/silent_print_core/doctype/silent_print_format/: silent_print_format.json
silent_print/utils/: print_format.py
